# real-time-bike-mobility-lakehouse

./: README.md  bike-hire-iceberg-sink.json  fetch_cycle_hire.py  pyproject.toml  schema.avro  stream_process.sql
